--- a/privacy/main.html
+++ b/privacy/main.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1 style="text-align: center;">
-    여기는 Privacy Policy(개인 정보 보호 정책) 메인화면입니다.
-  </h1>>
-</body>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 기본 양식 생성 후, 제목을 수정하고 해당 페이지에 적용할 파비콘 및 스타일시트를 추가해 주세요. -->
+    <title>판다마켓 - 이용약관</title>
+    <link rel="icon" href="../images/logo/favicon.ico" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
+  </head>
+
+  <body>
+    <h1 style="text-align: center;">
+      여기는 Privacy Policy(개인 정보 보호 정책) 메인화면입니다.
+    </h1>>  
+  </body>
 </html>
