--- a/index.html
+++ b/index.html
@@ -77,19 +77,17 @@
             />
             <div class="main-page-text align-left first">
               <span class="sub-title">Hot item</span>
-              <h1 class="main-title first">인기 상품을 확인해 보세요</h1>
-              <p class="description first">
-                가장 HOT한 중고거래 물품을 판다 마켓에서 확인해 보세요
-              </p>
+              <h1 class="main-title">인기 상품을 확인해 보세요</h1>
+              <p class="description">가장 HOT한 중고거래 물품을 판다 마켓에서 확인해 보세요</p>
             </div>
           </div>
         </div>
         <div class="main-page">
           <div class="main-content-container align-right">
-            <div class="main-page-text align-right second">
+            <div class="main-page-text align-right">
               <span class="sub-title">Search</span>
-              <h1 class="main-title second">구매를 원하는 상품을 검색하세요</h1>
-              <p class="description second">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
+              <h1 class="main-title">구매를 원하는 상품을 검색하세요</h1>
+              <p class="description">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
             </div>
             <img
               class="main-page-image"
@@ -101,29 +99,29 @@
         <div class="main-page">
           <div class="main-content-container">
             <img class="main-page-image" src="./assets/images/home/4.register_product.jpg" />
-            <div class="main-page-text align-left third">
+            <div class="main-page-text align-left">
               <span class="sub-title">Register</span>
-              <h1 class="main-title third">판매를 원하는 상품을 등록하세요</h1>
-              <p class="description third">어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요</p>
+              <h1 class="main-title">판매를 원하는 상품을 등록하세요</h1>
+              <p class="description">어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요</p>
             </div>
           </div>
         </div>
-        <section class="banner bottom">
-          <div class="banner-content">
-            <div class="banner-text-container bottom">
-              <p class="banner-text bottom">믿을 수 있는 판다마켓 중고 거래</p>
-            </div>
-            <div class="image-container bottom">
-              <img
-                class="banner-image"
-                width="746"
-                height="343"
-                src="./assets/images/home/img_home_bottom.png"
-                alt="판다마켓 상품 등록"
-              />
-            </div>
+      </section>
+      <section class="banner bottom">
+        <div class="banner-content">
+          <div class="banner-text-container bottom">
+            <p class="banner-text bottom">믿을 수 있는 판다마켓 중고 거래</p>
           </div>
-        </section>
+          <div class="image-container bottom">
+            <img
+              class="banner-image"
+              width="746"
+              height="343"
+              src="./assets/images/home/img_home_bottom.png"
+              alt="판다마켓 상품 등록"
+            />
+          </div>
+        </div>
       </section>
       <footer>
         <div class="footer-container">
