--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>login</title>
     <link rel="stylesheet" href="css/_reset.css" />
     <link rel="stylesheet" href="css/_login.css" />
+    <link rel="stylesheet" href="css/_modal.css" />
   </head>
   <body>
     <main id="login">
@@ -17,5 +18,7 @@
       </div>
     </main>
     <script src="js/form.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/input.js"></script>
   </body>
 </html>
