--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <title>회원가입</title>
     <link rel="stylesheet" href="css/_reset.css" />
     <link rel="stylesheet" href="css/_login.css" />
+    <link rel="stylesheet" href="css/_modal.css" />
   </head>
   <body>
     <main id="register">
@@ -13,11 +14,13 @@
         <a href="/" class="big_logo">
           <img src="./img/big_logo.png" alt="" />
         </a>
-        <form id="forms" data-label="이메일_닉네임_비밀번호_비밀번호 확인_회원가입">
-         
-        </form>
+        <form
+          id="forms"
+          data-label="이메일_닉네임_비밀번호_비밀번호 확인_회원가입"
+        ></form>
       </div>
     </main>
     <script src="js/form.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
