feat: 스프린트미션3 기본요구 사항 - 회원가입 페이지(진행중)
(cherry picked from commit 32fd4aea5ccb4c4f54e63087256258efb60d53ad)

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -51,7 +51,7 @@
               <p class="form-error-msg"></p>
             </div>
             <button type="button"
-              class="flex btn btn-block text-xl font-semibold rounded-xl py-4 bg-gray400">로그인</button>
+              class="flex btn btn-block text-xl font-semibold rounded-xl py-4 bg-gray400 justify-center">로그인</button>
           </form>
         </div>
 
