--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="mb-logo pc-none mb-block" src="images/logo/mb_panda-market-logo.png" width="103" height="51" alt=""
           aria-hidden="true">
       </a>
-      <a href="pages/sign-in.html" class="py-3 rounded-lg bg-primary btn px-11">
+      <a href="pages/sign-in.html" class="bg-primary btn py-3 px-11">
         로그인
       </a>
     </div>
