feat: 로그인/회원가입 인풋 관리 기능
- 기존에 함수로 구현했던 기능을 sign 클래스에 추가하고 이를 사용하도록 수정

- 에러 메시지를 숨길 때 aria-hidden 속성을 true로 변경

--- a/signup/index.html
+++ b/signup/index.html
@@ -35,12 +35,12 @@
         <section>
         <label for="email">이메일</label>
         <input id="email" type="email" placeholder="이메일을 입력해주세요" />
-        <p id="invalid-email-message" class="message"></p>
+        <p id="invalid-email-message" class="message" aria-hidden="true"></p>
       </section>
       <section>
         <label for="nickname">닉네임</label>
         <input id="nickname" type="text" placeholder="닉네임을 입력해주세요" />
-        <p id="invalid-nickname-message" class="message"></p>
+        <p id="invalid-nickname-message" class="message" aria-hidden="true"></p>
         </section>
         <section>
         <label for="password">비밀번호</label>
@@ -48,7 +48,7 @@
           <input id="password" type="password" placeholder="비밀번호를 입력해주세요" />
             <i class="eye-icon fa-regular fa-eye-slash"></i>
         </div>
-        <p id="invalid-password-message" class="message"></p>
+        <p id="invalid-password-message" class="message" aria-hidden="true"></p>
       </section>
       <section>
         <label for="confirm-password">비밀번호 확인</label>
@@ -56,7 +56,7 @@
           <input id="confirm-password" type="password" placeholder="비밀번호를 다시 한 번 입력해주세요" />
             <i class="eye-icon fa-regular fa-eye-slash"></i>
         </div>
-        <p id="invalid-password-confirm-message" class="message"></p>
+        <p id="invalid-password-confirm-message" class="message" aria-hidden="true"></p>
       </section>
         <button id="submit-button" type="submit" disabled>회원가입</button>
       </form>
