--- a/login/index.html
+++ b/login/index.html
@@ -43,7 +43,7 @@
         <section>
           <label for="email">이메일</label>
           <input id="email" type="email" placeholder="이메일을 입력해주세요" />
-          <p id="invalid-email-message" class="message"></p>
+          <p id="invalid-email-message" class="message" aria-hidden="true"></p>
         </section>
         <section>
           <label for="password">비밀번호</label>
@@ -51,7 +51,7 @@
             <input id="password" type="password" placeholder="비밀번호를 입력해주세요" />
             <i class="eye-icon fa-regular fa-eye-slash"></i>
           </div>
-          <p id="invalid-password-message" class="message"></p>
+          <p id="invalid-password-message" class="message" aria-hidden="true"></p>
         </section>
         <button id="submit-button" type="submit" disabled>로그인</button>
       </form>
