📱 Add Validation and Responsive Design
로그인,회원가입 validation 추가 및 반응형 디자인 추가

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>판다마켓</title>
-  <link rel="icon" href="images/panda.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/home.css">
+  <link rel="icon" href="/images/panda.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/styles/reset.css">
+  <link rel="stylesheet" href="/styles/home.css">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4F0RMGD7KM"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-4F0RMGD7KM');
-  </script>
+  <meta name="title" content="판다마켓">
+  <meta name="description" content="일상에서 모든 물건을 거래해보세요">
+  <meta property="og:title" content="판다마켓">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://jocular-duckanoo-ddf984.netlify.app/images/home/bottom-banner-image.png">
+  <meta property="og:url" content="https://jocular-duckanoo-ddf984.netlify.app/">
+  <meta property="og:description" content="일상에서 모든 물건을 거래해보세요">
+  <meta property="og:locale" content="ko_KR">
+  <meta property="og:site_name" content="판다마켓">
+  <script src="/scripts/common.js"></script>
 </head>
 <body>
   <div id="wrap">
@@ -25,7 +26,7 @@
         <h1 id="logo">
           <a href="/" role="button">
             <span class="sr-only">판다마켓 홈페이지</span>
-            <img src="images/panda-market-logo.svg" alt="판다마켓 로고">
+            <img src="/images/panda-market-logo.svg" alt="판다마켓 로고">
           </a>
         </h1>
         <ul>
@@ -42,13 +43,13 @@
             <h1>일상의 모든 물건을 거래해 보세요</h1>
             <a class="go-items" href="/items" role="button">구경하러 가기</a>
           </div>
-          <div class="hero-figure"><img class="noselect" src="images/home/hero-image.png" alt="판다마켓 히어로 이미지" /></div>
+          <div class="hero-figure"><img class="noselect" src="/images/home/hero-image.png" alt="판다마켓 히어로 이미지" /></div>
         </div>
       </section>
       <section class="features hotitem">
         <div class="feature-container">
           <div class="feature-figure">
-            <img class="noselect" src="images/home/feature1-image.png" alt="인기 상품 이미지">
+            <img class="noselect" src="/images/home/feature1-image.png" alt="인기 상품 이미지">
           </div>
           <div class="feature-desc">
             <h4>Hot item</h4>
@@ -60,7 +61,7 @@
       <section class="features search">
         <div class="feature-container">
           <div class="feature-figure">
-            <img class="noselect" src="images/home/feature2-image.png" alt="검색 이미지">
+            <img class="noselect" src="/images/home/feature2-image.png" alt="검색 이미지">
           </div>
           <div class="feature-desc">
             <h4>Search</h4>
@@ -72,7 +73,7 @@
       <section class="features register">
         <div class="feature-container">
           <div class="feature-figure">
-            <img class="noselect" src="images/home/feature3-image.png" alt="등록 이미지">
+            <img class="noselect" src="/images/home/feature3-image.png" alt="등록 이미지">
           </div>
           <div class="feature-desc">
             <h4>Register</h4>
@@ -86,7 +87,7 @@
           <div class="banner-desc">
             <h1>믿을 수 있는 판다마켓 중고 거래</h1>
           </div>
-          <div class="banner-figure"><img class="noselect" src="images/home/bottom-banner-image.png" alt="판다마켓 하단 배너 이미지" /></div>
+          <div class="banner-figure"><img class="noselect" src="/images/home/bottom-banner-image.png" alt="판다마켓 하단 배너 이미지" /></div>
         </div>
       </section>
     </main>
@@ -109,22 +110,22 @@
           <ul class="sns">
             <li>
               <a href="https://facebook.com/" target="_blank">
-                <img type="image/svg+xml" src="images/common/facebook-logo.svg" aria-label="페이스북" />
+                <img type="image/svg+xml" src="/images/common/facebook-logo.svg" aria-label="페이스북" />
               </a>
             </li>
             <li>
               <a href="https://x.com/" target="_blank">
-                <img type="image/svg+xml" src="images/common/twitter-logo.svg" aria-label="X(구 트위터)" />
+                <img type="image/svg+xml" src="/images/common/twitter-logo.svg" aria-label="X(구 트위터)" />
               </a>
             </li>
             <li>
               <a href="https://youtube.com/" target="_blank">
-                <img type="image/svg+xml" src="images/common/youtube-logo.svg" aria-label="유튜브" />
+                <img type="image/svg+xml" src="/images/common/youtube-logo.svg" aria-label="유튜브" />
               </a>
             </li>
             <li>
               <a href="https://instagram.com/" target="_blank">
-                <img type="image/svg+xml" src="images/common/instagram-logo.svg" aria-label="인스타그램" />
+                <img type="image/svg+xml" src="/images/common/instagram-logo.svg" aria-label="인스타그램" />
               </a>
             </li>
           </ul>
