--- a/login/index.html
+++ b/login/index.html
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="/styles/reset.css">
     <link rel="stylesheet" href="/styles/login.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4F0RMGD7KM"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-4F0RMGD7KM');
-    </script>
+    <script src="/scripts/common.js"></script>
   </head>
   <body class="login">
     <div id="wrap">
@@ -26,7 +18,7 @@
             <img class="logo" src="/images/panda-market-logo.svg" alt="판다마켓 로고" />
           </a>
         </h1>
-        <form id="login" name="login" method="post">
+        <form id="login" name="login" class="auth-form" method="post">
           <label for="email">
             <span class="label-title">이메일</span>
           </label>
@@ -40,7 +32,7 @@
               <img src="/images/login/eye.slash.svg" alt="비밀번호 표시" />
             </div>
           </div>
-          <button type="submit">로그인</button>
+          <button type="submit" class="login-btn">로그인</button>
         </form>
         <section class="social-login">
           <p>간편 로그인하기</p>
@@ -53,11 +45,11 @@
             </a>
           </div>
         </section>
-        <section class="go-signup">
+        <section class="auth-prompt">
           <span>판다마켓이 처음이신가요? <a href="/signup">회원가입</a></span>
         </section>
       </main>
     </div>
-    <script src="/scripts/login.js"></script>
+    <script src="/scripts/validation.js"></script>
   </body>
 </html>
