add: script에 type=module 추가

--- a/pages/auth/signup/signup.html
+++ b/pages/auth/signup/signup.html
@@ -108,5 +108,5 @@
       </div>
     </main>
   </body>
-  <script src="../../../common/js/form-validation.js"></script>
+  <script type="module" src="../../../common/js/form-validation.js"></script>
 </html>
