--- a/팬더마켓/index.html
+++ b/팬더마켓/index.html
@@ -12,6 +12,10 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og.url" content="https://panda-market/"/>
+    <meta property="og.title" content="판다마켓"/>
+    <meta property ="og:image" content="images/logo/panda-market-logo.png"/>
+    <meta property="og:description" content="일상에서 모든물건을 거래해보세요"/>
     <title>판다마켓</title>
     <link rel="icon" href="images/logo/favicon.ico">
     <link rel="stylesheet" href="reset.css">
@@ -21,9 +25,9 @@
         <img src="images/logo/panda-market-logo.png" alt="logo" class="logo">
          <a class="login" href="login/login.html">로그인</a>
     </header>   
-    <div class="so">
-        <div class="soin">
-            <div class="test">
+    <div class="first">
+        <div class="infirst">
+            <div class="firstline">
             <h1>
                 일상의 모든 물건을</br>
                 거래해 보세요
