--- a/팬더마켓/signup/signup.html
+++ b/팬더마켓/signup/signup.html
@@ -23,25 +23,32 @@
                 <p class="stext">
                     이메일
                 </p>
-                <input type="email" placeholder="이메일을 입력해주세요"/>
+                <input type="email" class="email" placeholder="이메일을 입력해주세요"/>
+                <div class="noneMsg hide">이메일을 입력해주세요.</div>
+                <div class="formMsg hide">잘못된 이메일 형식입니다. </div>
             </div>
             <div>
                 <p class="stext">
                     닉네임
                 </p>
-                <input type="text" placeholder="닉네임을 입력해주세요"/>
+                <input type="text" class="nickname" placeholder="닉네임을 입력해주세요"/>
+                <div class="nickMsg hide">닉네임을 입력해주세요.</div>
             </div>
             <div>
                 <p class="stext">
                     비밀번호
                 </p>
-                <input type="password" class="pass" placeholder="비밀번호를 입력해주세요"/>
+                <input type="password" class="pass blind" placeholder="비밀번호를 입력해주세요"/>
+                <div class="noPw hide">비밀번호를 입력해주세요.</div>
+                <div class="lMsg hide">비밀번호를 8자 이상 입력해주세요.</div>
             </div>
             <div>
                 <p class="stext">
                     비밀번호 확인
                 </p>
-                <input type="password" class="pass" placeholder="비밀번호를 다시 한 번 입력해주세요"/>
+                <input type="password" class="passcheck blind" placeholder="비밀번호를 다시 한 번 입력해주세요"/>
+                <div class="recheck hide">비밀번호를 다시 입력해주세요.</div>
+                <div class="matchMsg hide">비밀번호가 일치하지 않습니다.</div>
             </div>
             <div>
                 <button class="btn">
@@ -62,5 +69,12 @@
             </div>
         </div>
     </div>
+    <div class="modal hide">
+        <div class="modal_popup">
+            <p class="modal-line">사용 중인 이메일 입니다.</p>
+            <button type="button" class="close_btn">확인</button>
+        </div>
+    </div>    
+    <script src="signup.js"></script>
 </body>
 </html>
