feat: 회원가입 에러 메시지 모달 구현

--- a/pages/auth/signup/signup.html
+++ b/pages/auth/signup/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../styles/reset.css" />
     <link rel="stylesheet" href="../../../styles/common.css" />
     <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="../../../common/css/modal.css" />
   </head>
   <body>
     <main>
@@ -107,6 +108,12 @@
         <a href="../login/login.html">로그인</a>
       </div>
     </main>
+    <dialog id="error-message-modal" class="error-message-modal">
+      <p>사용 중인 이메일입니다.</p>
+      <button class="close-modal-button">확인</button>
+    </dialog>
+
+    <script></script>
   </body>
   <script type="module" src="../../../common/js/form-validation.js"></script>
 </html>
