--- a/팬더마켓/login/login.html
+++ b/팬더마켓/login/login.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main class="main">
-        <a href="../index.html" class="img"><img src="../images/logo/panda-market-logo.png" alt="logoimg" width="100%"></a>
+        <a href="../index.html" class="img"><img src="../images/logo/panda-market-logo.png" alt="logoimg" width="150%"></a>
         <div>
             <div>
                 <p class="text">
@@ -55,7 +55,7 @@
                 </p>
             </div>
         </div>
-    </main>
+    </div>
     <div class="modal hide">
         <div class="modal_popup">
             <p class="modal-line">비밀번호가 일치하지 않습니다.</p>
