--- a/팬더마켓/index.html
+++ b/팬더마켓/index.html
@@ -36,7 +36,7 @@
                 <a class="see" href="itmes/itmes.html">구경하러 가기</a>
             </div>
             </div>
-            <img src="images/home/hero-image.png" alt="heroimage" width="30%" class="tt">
+            <img src="images/home/hero-image.png" alt="heroimage" width="30%" class="heroimg">
         </div>
     </div>
     <div class="feature">
@@ -72,8 +72,8 @@
         </div>
     </div>
 
-    <div class="so">
-        <div class="soin">
+    <div class="first">
+        <div class="infirst">
             <h1 class="last">
                 믿을 수 있는</br>
                 판다마켓 중고 거래
