--- a/팬더마켓/login/login.html
+++ b/팬더마켓/login/login.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <main class="main">
+    <div class="main">
         <a href="../index.html" class="img"><img src="../images/logo/panda-market-logo.png" alt="logoimg" width="150%"></a>
         <div>
             <div>
